--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,15 +8,24 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="152dp"
-        android:layout_height="202dp"
-        android:layout_marginStart="151dp"
-        android:layout_marginTop="133dp"
-        android:layout_marginEnd="108dp"
-        android:layout_marginBottom="396dp"
-        android:text="SPLASH ACTIVITY"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/hello"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.897" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="112dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/logo"
+        android:contentDescription="@string/Teste" />
 </androidx.constraintlayout.widget.ConstraintLayout>
